# mklicense

./: .gitattributes  LICENSE  README.md  mklicense.spec  pyproject.toml
.github/workflows/: ci.yml
src/mklicense/: __init__.py  __main__.py  licenses.py
test/: conftest.py  test_file_generation.py  test_templates.py  test_valid_year.py
