[project]
name = "mklicense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JourneyCodesAyush", email = "journeycodes.ayush@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
mklicense = "mklicense.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "ruff>=0.15.16",
]
